# CCSwitch

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  t
alembic/: env.py
alembic/versions/: 3add7498b74c_drop_legacy_setting_rows.py  a7e16baf4a03_migrate_to_vault_and_drop_config_dir.py  b03dd0c6bdcf_initial_schema.py  b8f3a2d91c4e_add_vault_usage_columns.py  bcbe71a260df_drop_tmux_monitors.py  e2d620dcfbec_drop_auto_switch_enabled_setting.py  faae4c20080a_drop_display_name.py
backend/: auth.py  background.py  cache.py  config.py  database.py  main.py  models.py  schemas.py  ws.py
backend/routers/: accounts.py  (+4 more)
docs/: research-oauth-usage-endpoint-2026-04-18.md
frontend/: index.html
scripts/: cc-acc  cc-acc.py  ccswitch  ccswitch.py  cleanup_phantom_stale_2026_04_16.py  create_system_service.sh  launch.sh  remove_system_service.sh  status.sh
tests/: conftest.py  test_account_service.py  test_accounts_router.py  test_activate_account.py  test_anthropic_api.py  test_auth.py  test_background.py  test_cache_seeding.py  test_credential_provider.py  test_credential_targets.py  test_credential_targets_router.py  test_e2e_smoke.py  test_frontend_handlers.py  test_init_db.py  test_integration_auto_switch.py  test_integration_reactive_refresh.py  test_integration_transient_refresh.py  test_keychain.py  test_login_session_service.py  test_schemas.py  test_service_router.py  test_settings_router.py  test_settings_service.py  test_switcher.py  test_tmux_router.py  test_tmux_service.py  test_ws.py  test_ws_integration.py
(+39 files in other folders)
