[project]
name = "claude-multi-account"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]>=2.0.40",
    "aiosqlite==0.20.0",
    "apscheduler==3.10.4",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.5.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "anyio==4.6.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
